--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -19,6 +19,16 @@ textarea {
   font-family: "Poppins", sans-serif;
 }
 
+.primary-button {
+  background: @pink;
+  border: 0;
+  border-radius: 8px;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 8px 35px;
+}
+
 @media @tablets {
   body {
     background: white;
