Responsividade, Modal e quantidades carrinho

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -29,6 +29,16 @@ textarea {
   padding: 8px 35px;
 }
 
+.secondary-button {
+  background: white;
+  border: 1px solid black;
+  border-radius: 8px;
+  color: black;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 8px 35px;
+}
+
 @media @tablets {
   body {
     background: white;
