--- a/src/assets/css/variables.less
+++ b/src/assets/css/variables.less
@@ -4,6 +4,7 @@
 @light-yellow: #fdc8444d;
 @bg-color: #fafafa;
 @yellow: #FDC844;
+@error-color: rgb(250, 59, 59);
 
 @small-desktops: ~'(max-width: 1000px)';
 @tablets: ~'(max-width: 767px)';
